etruscan analsis to final

--- a/py_notebooks/01_etruscan_skulls.ipynb
+++ b/py_notebooks/01_etruscan_skulls.ipynb
@@ -5,14 +5,9 @@
    "id": "49af69f2-faf6-4b1b-bb9e-38a8eb8f3127",
    "metadata": {},
    "source": [
-    "# Using the skull size of Etruscan and Italian males to analyse if there was an ancestral link  # noqa: E501\n",
+    "# Were the Etruscan people native to Italy?\n",
     "\n",
     "## Notes\n",
-    "\n",
-    "### Question of interest\n",
-    "\n",
-    "Do the ancient Etruscan people of Italy share a common ancestral link\n",
-    "with those of native Italians?\n",
     "\n",
     "### Data\n",
     "\n",
@@ -21,7 +16,6 @@
     "- Data fields:\n",
     "  - **type** `str` : origin of skull, Etruscan or Italian\n",
     "  - **size** `float` : skull breadth (mm)\n",
-    "\n",
     "\n",
     "### Method\n",
     "\n",
@@ -35,33 +29,6 @@
     "- Checked assumption of common population variance\n",
     "- Performed **t**-test: mean skull breadth of the Etruscan skulls is\n",
     "  equal to that of the Italian skulls\n",
-    "\n",
-    "### Results\n",
-    "\n",
-    "- The data returned the descriptive column `type` as an `object`,\n",
-    "  rather than a `str`\n",
-    "  - This did not affect the analysis, so not remedial action was taken\n",
-    "- None of the visualisations show the assumption that both samples are\n",
-    "  normally distributed is inappropriate\n",
-    "  - Frequency histogram shows both samples are unimodal and symmetric\n",
-    "  - Probability plots show the data to closely follow a fitted straight\n",
-    "- Description of samples:\n",
-    "  - `Etruscan(size=84, mean=143.8, tconfint_mean=(142.5, 145.1))`\n",
-    "  - `Italian(size=70, mean=132.4, tconfint_mean=(131.1, 133.8))`\n",
-    "- Description of difference between the samples\n",
-    "  - `SampleDiff(mean_diff=11.3, tconfint_diff=(9.5, 13.2))`\n",
-    "- **t**-test result\n",
-    "  - `ResultSummary(tstat=11.924, pval=0.000000, dof=152)`\n",
-    "\n",
-    "### Discussion\n",
-    "\n",
-    "- Null hypothesis is rejected with **p**-value < 0.000001\n",
-    "- Very strong evidence that the mean Etruscan skull breadth is not\n",
-    "  equal to that of the mean Italian skull breadth\n",
-    "- Given **t** > 0, we conclude that there is evidence that the\n",
-    "  Etruscans had larger skulls on average than Italians\n",
-    "- Result suggests there is not a common ancestral link between the two\n",
-    "  ancient peoples\n",
     "\n",
     "### Reference\n",
     "\n",
@@ -343,12 +310,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "daf710f9-c72a-4f8f-8c24-fbe330941eb5",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
-    "# initialise DescrStatsW objects\n",
-    "dsw_etr: sm.DescrStatsW = ttest.d1\n",
-    "dsw_ita: sm.DescrStatsW = ttest.d2"
+    "# check for common population variance. Expect < 3\n",
+    "max(ttest.d1.var / ttest.d2.var, ttest.d2.var / ttest.d1.var) < 3"
    ]
   },
   {
@@ -371,8 +339,8 @@
     }
    ],
    "source": [
-    "# check for common population variance. Expect < 3\n",
-    "max(dsw_etr.var / dsw_ita.var, dsw_ita.var / dsw_etr.var) < 3"
+    "describe.TSample(\n",
+    "    \"Etruscans\", ttest.d1.nobs, ttest.d1.mean, ttest.d1.tconfint_mean())"
    ]
   },
   {
@@ -394,7 +362,7 @@
    ],
    "source": [
     "describe.TSample(\n",
-    "    \"Etruscans\", dsw_etr.nobs, dsw_etr.mean, dsw_etr.tconfint_mean())"
+    "    \"Italians\", ttest.d2.nobs, ttest.d2.mean, ttest.d2.tconfint_mean())"
    ]
   },
   {
@@ -415,30 +383,8 @@
     }
    ],
    "source": [
-    "describe.TSample(\n",
-    "    \"Italians\", dsw_ita.nobs, dsw_ita.mean, dsw_ita.tconfint_mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "c8b11e7b-67b3-4055-8c89-f2db5fece7e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Difference(mean_diff=11.330952, tconfint_diff=(9.453650, 13.208254))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "describe.TDiff(\n",
-    "    dsw_etr.mean - dsw_ita.mean, ttest.tconfint_diff())"
+    "    ttest.d1.mean - ttest.d2.mean, ttest.tconfint_diff())"
    ]
   },
   {
