--- a/py_notebooks/01_etruscan_skulls.ipynb
+++ b/py_notebooks/01_etruscan_skulls.ipynb
@@ -313,7 +313,18 @@
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# check for common population variance. Expect < 3\n",
     "max(ttest.d1.var / ttest.d2.var, ttest.d2.var / ttest.d1.var) < 3"
@@ -330,7 +341,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "Etruscans(size=84, mean=143.773810, tconfint_mean=(142.478129, 145.069490))"
       ]
      },
      "execution_count": 12,
@@ -352,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "Etruscans(size=84, mean=143.773810, tconfint_mean=(142.478129, 145.069490))"
+       "Italians(size=70, mean=132.442857, tconfint_mean=(131.071830, 133.813884))"
       ]
      },
      "execution_count": 13,
@@ -374,7 +385,7 @@
     {
      "data": {
       "text/plain": [
-       "Italians(size=70, mean=132.442857, tconfint_mean=(131.071830, 133.813884))"
+       "Difference(mean_diff=11.330952, tconfint_diff=(9.453650, 13.208254))"
       ]
      },
      "execution_count": 14,
@@ -389,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "fa2b1339-d1bf-4b8f-9c1f-b110a969eea7",
    "metadata": {},
    "outputs": [
@@ -399,7 +410,7 @@
        "ResultSummary(tstat=11.924823, pval=0.000000, dof=152)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
